Fix slider on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+astro-root {
+  @apply !block;
+}
